[package]
name = "rust_aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.6"
enum-map = "2.7.3"
num = "0.4.3"
linked-hash-map = "0.5.6"
nalgebra = "0.33.0"
priority-queue = "2.1.0"
bimap = "0.6.3"